# zero-agent

./: Cargo.toml
crates/zero-agent/: Cargo.toml
crates/zero-agent/examples/: test_anthropic.rs  test_llm_ops_skills.rs  test_openai.rs  test_skill.rs  test_skill_from_file.rs
crates/zero-agent/examples/skills/app-build-android-packaging-api/: SKILL.md
crates/zero-agent/examples/skills/app-build-ios-packaging-api/: SKILL.md
crates/zero-agent/examples/skills/app-switch-query-api/: SKILL.md
crates/zero-agent/examples/skills/math-assistant/: SKILL.md
crates/zero-agent/examples/skills/multi-repo-feature-branch-api/: SKILL.md
crates/zero-agent/examples/skills/ticket-forwarding-api/: SKILL.md
crates/zero-agent/src/: context.rs  event.rs  lib.rs  loop_.rs  prompts.rs  skill.rs  subagent.rs  tool.rs
crates/zero-agent/src/tools/: json_validate.rs  mod.rs  parallel_subagent.rs  spawn_subagent.rs  todo.rs
crates/zero-ai/: Cargo.toml
crates/zero-ai/src/: lib.rs  provider.rs  types.rs
crates/zero-ai/src/providers/: anthropic.rs  openai.rs
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
examples/skills/math-assistant/: SKILL.md
examples/skills/text-analyzer/: SKILL.md
